# tomato-todo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: release.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/components/: command-palette.tsx  error-boundary.tsx  status-bar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  skeleton.tsx  switch.tsx
src/features/habits/: habits-page.tsx
src/features/notes/: notes-page.tsx
src/features/pomodoro/: pomodoro-page.tsx  timer.test.ts  use-timer-snapshot.test.ts  use-timer-snapshot.ts
src/features/settings/: settings-page.tsx
src/features/statistics/: statistics-page.tsx
src/features/tasks/: tasks-page.tsx
src/layouts/: app-layout.tsx
src/lib/: i18n.ts  utils.test.ts  utils.ts
src/locales/en/: translation.json
src/locales/zh-CN/: translation.json
src/services/: desktop.ts
src/stores/: app-store.ts  productivity-store.test.ts  productivity-store.ts
src/styles/: globals.css
src/types/: domain.ts
